added health rest API
